# AMD_Anirvium

./: .env.example  .gitignore  IMPLEMENTATION_DELTA_PLAN.md  IMPLEMENTATION_PLAN.md  JUDGES_READ_THIS_FIRST.md  LICENSE  README.md  SUBMISSION_SUMMARY.md  architecture_diagram.md  docker-compose.yml  repo-structure.txt
backend/: .dockerignore  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: compliance_agent.py  critic_agent.py  escalation_agent.py  human_escalation_agent.py  learning_extraction_agent.py  optimizer_agent.py  planner_agent.py  policy_agent.py  reflection_agent.py  response_agent.py  retrieval_agent.py  triage_agent.py  visual_evidence_agent.py
backend/app/api/: __init__.py  routes_cx.py  routes_data.py  routes_demo.py  routes_evaluations.py  routes_kb.py  routes_memory.py  routes_platform.py  routes_runs.py  routes_tickets.py
backend/app/data/: customer_support_tickets.json  (+5 more)
backend/tests/: test_agent_runner.py  test_api_observability.py  test_approval_states.py  test_async_runs.py  test_capability_router.py  test_customer_support_demo.py  test_data_api.py  test_demo_cache.py  test_demo_winning_run.py  test_diagnosis_schema.py  test_evaluation_metric_bounds.py  test_evaluator.py  test_graph_discovery.py  test_kb_layers.py  test_live_query_routing.py  test_llm_integration_paths.py  test_memory.py  test_memory_trust_and_validation.py  test_optimizer_recommendations.py  test_platform_status.py  test_relational_store.py  test_run_comparison.py  test_sarvagun_superturiya.py  test_trajectory_schema.py
(+116 files in other folders)
