[project]
name = "anirvium-ai-backend"
version = "0.1.0"
description = "Trajectory intelligence backend for enterprise support-agent workflows."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "httpx==0.28.1",
]

[dependency-groups]
dev = [
  "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
